Ensure that highlight wrappers do not overflow
When a highlight wrapper contains many individual elements,
the content may overflow. Need an explicit maximum width
to fix this. Note: 100% is safe because the code guarantees
that the absolutely positioned element is inserted at the
start of the line.

--- a/src/search-tools.less
+++ b/src/search-tools.less
@@ -14,6 +14,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    max-width: 100%;
     color: transparent;
     background: transparent;
 }
